crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_TCH004_4.py.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
expression: diagnostics
---
- kind:
    name: RuntimeImportInTypeCheckingBlock
    body: "Move import `typing.Any` out of type-checking block. Import is used for more than type hinting."
    commit: ~
    fixable: false
  location:
    row: 4
    column: 23
  end_location:
    row: 4
    column: 26
  fix: ~
  parent: ~

