crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_runtime_evaluated_baseclasses_1.py.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
expression: diagnostics
---
- kind:
    RuntimeImportInTypeCheckingBlock:
      full_name: datetime
  location:
    row: 10
    column: 11
  end_location:
    row: 10
    column: 19
  fix: ~
  parent: ~
- kind:
    RuntimeImportInTypeCheckingBlock:
      full_name: array.array
  location:
    row: 11
    column: 22
  end_location:
    row: 11
    column: 27
  fix: ~
  parent: ~
- kind:
    RuntimeImportInTypeCheckingBlock:
      full_name: pandas
  location:
    row: 13
    column: 11
  end_location:
    row: 13
    column: 17
  fix: ~
  parent: ~

