crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_runtime_evaluated_decorators_1.py.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
expression: diagnostics
---
- - kind:
      name: RuntimeImportInTypeCheckingBlock
      body: "Move import `datetime` out of type-checking block. Import is used for more than type hinting."
      suggestion: ~
      fixable: false
    location:
      row: 12
      column: 11
    end_location:
      row: 12
      column: 19
    fix: ~
    parent: ~
  - kind:
      name: RuntimeImportInTypeCheckingBlock
      body: "Move import `array.array` out of type-checking block. Import is used for more than type hinting."
      suggestion: ~
      fixable: false
    location:
      row: 13
      column: 22
    end_location:
      row: 13
      column: 27
    fix: ~
    parent: ~
  - kind:
      name: RuntimeImportInTypeCheckingBlock
      body: "Move import `pandas` out of type-checking block. Import is used for more than type hinting."
      suggestion: ~
      fixable: false
    location:
      row: 15
      column: 11
    end_location:
      row: 15
      column: 17
    fix: ~
    parent: ~

