crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__strict.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
expression: diagnostics
---
- - kind:
      name: TypingOnlyThirdPartyImport
      body: "Move third-party import `pkg.A` into a type-checking block"
      suggestion: ~
      fixable: false
    location:
      row: 24
      column: 20
    end_location:
      row: 24
      column: 21
    fix: ~
    parent: ~
  - kind:
      name: TypingOnlyThirdPartyImport
      body: "Move third-party import `pkg.A` into a type-checking block"
      suggestion: ~
      fixable: false
    location:
      row: 32
      column: 20
    end_location:
      row: 32
      column: 21
    fix: ~
    parent: ~
  - kind:
      name: TypingOnlyThirdPartyImport
      body: "Move third-party import `pkg.bar.A` into a type-checking block"
      suggestion: ~
      fixable: false
    location:
      row: 51
      column: 24
    end_location:
      row: 51
      column: 25
    fix: ~
    parent: ~

