crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__type_checking_block_own_line.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
---
<filename>:6:8: TCH002 [*] Move third-party import `pandas` into a type-checking block
   |
 6 | from typing import TYPE_CHECKING
 7 | 
 8 | import pandas as pd
   |        ^^^^^^^^^^^^ TCH002
 9 | 
10 | if TYPE_CHECKING:
   |
   = help: Move into type-checking block

ℹ Suggested fix
3 3 | 
4 4 | from typing import TYPE_CHECKING
5 5 | 
6   |-import pandas as pd
7 6 | 
8 7 | if TYPE_CHECKING:
  8 |+    import pandas as pd
9 9 |     import os
10 10 | 
11 11 | def f(x: pd.DataFrame):


