crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__typing-only-first-party-import_TCH001.py.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
---
./resources/test/fixtures/flake8_type_checking/TCH001.py:20:19: TCH001 Move application import `.TYP001` into a type-checking block
   |
20 | def f():
21 |     from . import TYP001
   |                   ^^^^^^ TCH001
22 | 
23 |     x: TYP001
   |


